--- a/app/src/main/res/layout/activity_mango_sour.xml
+++ b/app/src/main/res/layout/activity_mango_sour.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainSour"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
     tools:context=".MangoSour">
+
 
     <ImageButton
         android:id="@+id/btnAtrasMangoSour"
