vista para crear receta(solo camara)
se creo una activity con un formulario para crear una receta pero solo se creo para pruebas de implementacion del uso de la camara, destacar que no pide permisos porque la imagen que se toma solo es en la app y no se accede a la galeria u otros archivos relacionados, en resumen la camara solo toma una foto que la guerda en local y solo dura el tiempo de ejecucion de la app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,7 +156,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Crear Receta"
+        android:text="Mis Recetas"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
