--- a/app/src/main/res/layout/activity_parrillas.xml
+++ b/app/src/main/res/layout/activity_parrillas.xml
@@ -16,7 +16,8 @@
         android:layout_height="70dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/transparent"
+        android:background="@null"
+        android:foreground="@null"
         android:contentDescription="@string/volver_atras"
         android:scaleType="centerCrop"
         android:src="@drawable/btn_retroceso"
@@ -43,7 +44,8 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="4dp"
-        android:background="#0039A6"
+        android:background="@null"
+        android:foreground="@null"
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/btn_anticucho"
@@ -72,7 +74,8 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="4dp"
-        android:background="#0039A6"
+        android:background="@null"
+        android:foreground="@null"
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/btn_costillar"
@@ -100,7 +103,8 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="4dp"
-        android:background="#0039A6"
+        android:background="@null"
+        android:foreground="@null"
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/btn_pollo"
