--- a/app/src/main/res/drawable/fondo_chile.xml
+++ b/app/src/main/res/drawable/fondo_chile.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#C21B0E"
-        android:centerColor="#D52B1E"
-        android:endColor="#4F0B05"
+        android:startColor="#F06292"
+        android:centerColor="#E53935"
+        android:endColor="#AD1457"
         android:angle="270"/>
 </shape>
