--- a/app/src/main/res/layout/activity_empanadas.xml
+++ b/app/src/main/res/layout/activity_empanadas.xml
@@ -9,7 +9,6 @@
     android:background="@drawable/fondo_chile"
     tools:context=".Empanadas">
 
-
     <!-- Botón de Atrás -->
     <ImageButton
         android:id="@+id/btnRetrocederAnterior"
@@ -17,7 +16,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/transparent"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/volver_atras"
         android:scaleType="centerCrop"
         android:src="@drawable/btn_retroceso"
@@ -30,7 +29,7 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="4dp"
-        android:background="#0039A6"
+        android:background="@android:color/transparent"
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/btn_marisco"
@@ -45,7 +44,7 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="4dp"
-        android:background="#0039A6"
+        android:background="@android:color/transparent"
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/btn_pino"
@@ -60,7 +59,7 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_marginTop="4dp"
-        android:background="#0039A6"
+        android:background="@android:color/transparent"
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/quesoempanada"
@@ -69,6 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEmpanadaQueso" />
 
+    <!-- TextViews -->
     <TextView
         android:id="@+id/tvEmpanadaQueso"
         android:layout_width="wrap_content"
