--- a/app/src/main/res/layout/activity_receta_crear.xml
+++ b/app/src/main/res/layout/activity_receta_crear.xml
@@ -104,6 +104,15 @@
                 android:scaleType="centerCrop"
                 android:background="@android:color/transparent" />
 
+            <Button
+                android:id="@+id/btnCrearR"
+                android:layout_width="300dp"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#0039A6"
+                android:textColor="#FFFF"
+                android:text="Crear Receta" />
+
         </LinearLayout>
 
     </ScrollView>
