Contraste de letras
Se cambio el tono de las letras como opcion ante el nuevo fondo.

--- a/app/src/main/res/layout/activity_mango_sour.xml
+++ b/app/src/main/res/layout/activity_mango_sour.xml
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/ingredientes_mango_sour"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/imgMangoSour"
@@ -63,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/preparacion_mango_sour"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/ingredientesMangoSour"
