--- a/app/src/main/res/layout/activity_vino_con_frutas.xml
+++ b/app/src/main/res/layout/activity_vino_con_frutas.xml
@@ -8,50 +8,64 @@
     android:background="@drawable/fondo_chile"
     tools:context=".VinoConFrutas">
 
+
     <ImageButton
         android:id="@+id/btnAtrasVinoFrutas"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:backgroundTint="#D52B1E"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/volver_atras"
-        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/btn_retroceso"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tituloVinoFrutas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="@string/titulo_vino_frutas"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/btnAtrasVinoFrutas"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.114" />
 
     <ImageView
         android:id="@+id/imgVinoFrutas"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/vino_con_frutas"
         android:contentDescription="@string/titulo_vino_frutas"
-        app:layout_constraintTop_toBottomOf="@id/tituloVinoFrutas"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.211" />
+
 
     <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/imgVinoFrutas"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/scrollViewVino"
+        android:layout_width="341dp"
+        android:layout_height="428dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="16dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="6dp"
+        android:background="#0039A6"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,8 +77,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/ingredientes_vino_frutas"
-                android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textColor="#FFFF"
+                android:textSize="14sp"
                 android:textStyle="bold"/>
 
             <TextView
@@ -72,10 +86,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/preparacion_vino_frutas"
-                android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textColor="#FFFF"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:layout_marginTop="12dp"/>
         </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
