Se agrego layout de parrillasTodos
Se agrego esta layout para poder reducir la cantidad de layouts, y simplificar el diseño de nuestra aplicacion para que tenga una vista mas amigable y no con tantos botones, se quito el boton de retroceso.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,7 +111,7 @@
 
     <!-- Botón Parrillas -->
     <ImageButton
-        android:id="@+id/recetasParrillas"
+        android:id="@+id/parrillasTodas"
         android:layout_width="170dp"
         android:layout_height="115dp"
         android:adjustViewBounds="true"
@@ -156,7 +156,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.792"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recetasParrillas"
+        app:layout_constraintTop_toBottomOf="@+id/parrillasTodas"
         app:layout_constraintVertical_bias="0.0" />
 
     <!-- Texto Mis Recetas -->
