Se realizo merge desde master a testbranch y se cambio el color de fondo de la burbuja de texto y se agrego la activity parrillasTodos a manifest
Se realizo merge desde master a testbranch y se cambio el color de fondo de la burbuja de texto y se agrego la activity parrillasTodos a manifest

--- a/app/src/main/res/drawable/burbuja_texto.xml
+++ b/app/src/main/res/drawable/burbuja_texto.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <!-- Color de fondo -->
-    <solid android:color="#AA0039A6" /> <!-- Azul semitransparente -->
+    <solid android:color="#0039A6" /> <!-- Azul semitransparente -->
 
     <!-- Bordes redondeados -->
     <corners android:radius="16dp" />
