--- a/app/src/main/res/layout/activity_empanadas_todas.xml
+++ b/app/src/main/res/layout/activity_empanadas_todas.xml
@@ -8,11 +8,26 @@
     android:background="@drawable/fondo_chile"
     tools:context=".EmpanadasTodas">
 
+    <!-- Mensaje inicial -->
+    <TextView
+        android:id="@+id/mensajeDeslizar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Deslizar hacia los lados para cambiar recetas"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:background="@drawable/burbuja_texto"
+        android:padding="10dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <HorizontalScrollView
         android:layout_width="409dp"
         android:layout_height="729dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,6 +40,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+            <!-- Empanada de Queso -->
             <LinearLayout
                 android:id="@+id/EQuesoV"
                 android:layout_width="410dp"
@@ -60,11 +76,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="34dp"
                     android:layout_marginTop="40dp"
-                    android:padding="6dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:padding="6dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -92,9 +104,9 @@
                     </LinearLayout>
                 </ScrollView>
 
-
             </LinearLayout>
 
+            <!-- Empanada de Pino -->
             <LinearLayout
                 android:id="@+id/EPinoV"
                 android:layout_width="410dp"
@@ -130,11 +142,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="34dp"
                     android:layout_marginTop="40dp"
-                    android:padding="6dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:padding="6dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -162,9 +170,9 @@
                     </LinearLayout>
                 </ScrollView>
 
-
             </LinearLayout>
 
+            <!-- Empanada de Marisco -->
             <LinearLayout
                 android:id="@+id/EMariscoV"
                 android:layout_width="410dp"
@@ -200,11 +208,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="34dp"
                     android:layout_marginTop="40dp"
-                    android:padding="6dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:padding="6dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -231,7 +235,6 @@
                             android:layout_marginTop="12dp"/>
                     </LinearLayout>
                 </ScrollView>
-
 
             </LinearLayout>
 
